# nemotron-speech-csharp

./: .gitignore  AGENTS.md  NemotronSpeech.slnx  README.md  nuget.config
.github/agents/: winui3-expert.agent.md
.github/instructions/: winui3-official-docs.instructions.md
.github/workflows/: build-voicetype-release.yml  release-voicetype-tag.yml
BenchmarkSuite1/: BenchmarkSuite1.csproj  ModelSessionCpuBenchmark.cs
DiarizationConverter/: README.md  requirements.txt
DiarizationConverter/DiarizationTest/: DiarizationEvaluator.cs  DiarizationTest.csproj  MelSpectrogram.cs  Program.cs  SortformerInference.cs
Doc/: batch-audio-transcription-plan.md  nemotron-3.5-asr-timestamps-analysis.md  opset24-analysis.md  opset24-conversion.md  voicetype-winui3-migration-plan.md
NemotronSpeech/: AppOptions.cs  AudioSource.cs  AudioUtils.cs  LanguageMapper.cs  MelSpectrogram.cs  ModelSession.cs  NemotronSpeech.csproj  Program.cs  README.md  SharedModelHost.cs  SortformerDiarizationService.cs  Transcriber.cs  nuget.config
NemotronSpeech/Common/: Common.cs
NemotronSpeech/Native/: CMakeLists.txt  CustomOpLibrary.cs  README.md  build.ps1  swish_cpu.cpp
SpeechLib/: DiarizationMergeService.cs  LanguageMapper.cs  README.md  SpeechLib.csproj  Transcriber.cs
VoiceType/: App.xaml  App.xaml.cs  README.md  VoiceType.csproj
VoiceType.Tests/: E2E_DiarizationMergeTests.cs  E2E_ModelDownloaderServiceTests.cs  E2E_WordTimingsRegressionTests.cs  Unit_ModelDownloaderViewModelTests.cs  Unit_WordTimingsTests.cs  VoiceType.Tests.csproj
VoiceType.WinUI/: ASPIRE_DASHBOARD.md  App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  VoiceType.WinUI.csproj  app.manifest
converter/: check_final.py  check_quant.py  check_shapes.py  patch_olive_torch.py  test_attn24.onnx
(+150 files in other folders)
